--- a/Lec5/readme
+++ b/Lec5/readme
@@ -1,2 +1,1 @@
-Link to google cloud courses on Coursera:
-https://www.coursera.org/programs/google-kickstart-learning-program-c1wzg
+Link to google cloud courses on Coursera: Contact me!
